--- a/index.html
+++ b/index.html
@@ -5,146 +5,125 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LivenJet | Omni-Nexus</title>
     <style>
-        :root { --gold: #FFD700; --dark: #050505; --neon: #00f2ff; }
-        body { background-color: #000; color: var(--gold); font-family: 'Segoe UI', sans-serif; text-align: center; padding: 20px; margin: 0; overflow-x: hidden; padding-bottom: 120px; }
+        :root { --gold: #FFD700; --dark: #050505; }
+        body { background-color: #000; color: var(--gold); font-family: 'Segoe UI', sans-serif; text-align: center; padding: 20px; margin: 0; overflow-x: hidden; padding-bottom: 140px; }
         
-        /* Particle Background Simulation */
-        .bg-glow { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: radial-gradient(circle at 50% 50%, #111 0%, #000 100%); z-index: -1; }
+        /* Boot & Global Styles */
+        #boot-screen { position: fixed; top:0; left:0; width:100%; height:100%; background:#000; z-index: 9999; display: flex; flex-direction: column; align-items: center; justify-content: center; transition: 0.8s; }
+        .avatar { width: 42px; height: 42px; background: var(--gold); border-radius: 8px; display: flex; align-items: center; justify-content: center; color: #000; font-weight: 900; }
 
-        /* Boot Interface */
-        #boot-screen { position: fixed; top:0; left:0; width:100%; height:100%; background:#000; z-index: 9999; display: flex; flex-direction: column; align-items: center; justify-content: center; }
-        .scan-line { width: 100%; height: 2px; background: var(--gold); position: absolute; top: 0; animation: scan 2s linear infinite; opacity: 0.3; }
+        /* Pillar Containers */
+        .pillar { display: none; animation: fadeIn 0.5s ease; }
+        .active { display: block; }
 
-        /* Navigation & Header */
-        .top-bar { display: flex; justify-content: space-between; align-items: center; padding: 15px; background: rgba(10,10,10,0.8); backdrop-filter: blur(10px); border-bottom: 1px solid #222; margin: -20px -20px 20px -20px; }
-        .avatar { width: 42px; height: 42px; background: var(--gold); border-radius: 8px; display: flex; align-items: center; justify-content: center; color: #000; font-weight: 900; box-shadow: 0 0 20px rgba(255,215,0,0.4); }
-
-        /* Main UI Pillars */
-        .pillar-container { display: none; animation: zoomIn 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
-        .active-pillar { display: block; }
-
-        /* War Room Cards */
-        .card-ui { 
-            background: rgba(15,15,15,0.9); border: 1px solid #333; 
-            border-left: 4px solid var(--gold); border-radius: 12px; 
-            padding: 25px; margin: 20px auto; max-width: 340px;
-            text-align: left; transition: 0.3s;
+        /* Master Console Design */
+        .console-box { 
+            background: rgba(15,15,15,0.9); border: 1px solid #222; 
+            border-left: 3px solid var(--gold); border-radius: 12px; 
+            padding: 20px; margin: 15px auto; max-width: 340px; text-align: left;
         }
-        .card-ui:hover { border-color: var(--gold); box-shadow: 0 0 20px rgba(255,215,0,0.1); }
 
-        .stat-row { display: flex; justify-content: space-between; margin-bottom: 10px; font-size: 11px; color: #888; }
-        .stat-val { color: #fff; font-weight: bold; }
+        /* Live System Log (The "Soul" of the App) */
+        .system-log {
+            background: #050505; border: 1px solid #111; border-radius: 8px;
+            padding: 10px; font-family: monospace; font-size: 9px; height: 50px;
+            overflow: hidden; color: #444; margin-top: 15px;
+        }
+        .log-line { animation: scrollLog 3s infinite; }
 
         /* Buttons */
-        .btn { background: var(--gold); color: #000; font-weight: bold; padding: 18px; width: 100%; border: none; border-radius: 12px; margin: 15px 0; cursor: pointer; letter-spacing: 2px; text-transform: uppercase; font-size: 12px; }
-        .btn:active { transform: scale(0.98); opacity: 0.8; }
+        .btn { background: var(--gold); color: #000; font-weight: bold; padding: 18px; width: 100%; border: none; border-radius: 12px; margin: 10px 0; cursor: pointer; font-size: 12px; letter-spacing: 1px; }
 
-        /* Master Dock */
-        .dock { position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); width: 90%; max-width: 400px; background: rgba(5,5,5,0.9); border: 1px solid #222; border-radius: 30px; display: flex; justify-content: space-around; padding: 20px 0; z-index: 1000; }
-        .dock-item { font-size: 24px; opacity: 0.2; cursor: pointer; transition: 0.3s; }
-        .dock-item.active { opacity: 1; transform: translateY(-10px) scale(1.2); color: var(--gold); }
+        /* Mobile Dock */
+        .dock { position: fixed; bottom: 15px; left: 50%; transform: translateX(-50%); width: 92%; max-width: 400px; background: rgba(10,10,10,0.98); border: 1px solid #222; border-radius: 25px; display: flex; justify-content: space-around; padding: 18px 0; z-index: 1000; }
+        .dock-item { font-size: 22px; opacity: 0.2; transition: 0.3s; }
+        .active-icon { opacity: 1; transform: translateY(-8px); color: var(--gold); }
 
-        @keyframes scan { from { top: 0; } to { top: 100%; } }
-        @keyframes zoomIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
+        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+        @keyframes scrollLog { 0% { transform: translateY(0); } 100% { transform: translateY(-40px); } }
     </style>
 </head>
 <body>
 
-    <div class="bg-glow"></div>
-
     <div id="boot-screen">
-        <div class="scan-line"></div>
-        <h1 style="letter-spacing: 15px; margin: 0;">LIVENJET</h1>
-        <p style="color: #444; font-size: 10px; margin-top: 10px;">NEURAL INTERFACE CONNECTING...</p>
+        <h2 style="letter-spacing: 10px;">LIVENJET</h2>
+        <p style="font-size: 9px; color: #333;">CONNECTING TO SATELLITE...</p>
     </div>
 
-    <div class="top-bar">
-        <div style="display: flex; align-items: center; gap: 12px;">
+    <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px 0;">
+        <div style="display: flex; align-items: center; gap: 10px;">
             <div class="avatar">SA</div>
             <div style="text-align: left;">
-                <p style="margin: 0; font-size: 12px; font-weight: bold; color: #fff;">STEVEN ADEWOLE</p>
-                <p id="sys-status" style="margin: 0; font-size: 9px; color: #00ff00;">● ENCRYPTED</p>
+                <p style="margin:0; font-size:12px; font-weight:bold; color:#fff;">STEVEN ADEWOLE</p>
+                <p style="margin:0; font-size:9px; color:#0f0;">● SECURE NODE</p>
             </div>
         </div>
-        <div id="timer" style="font-family: monospace; font-size: 12px;">00:00:00</div>
+        <div id="clock" style="font-size: 11px; font-family: monospace;">00:00:00</div>
     </div>
 
-    <div id="p-home" class="pillar-container active-pillar">
-        <p style="letter-spacing: 5px; font-size: 11px; color: #666;">COMMAND CENTER</p>
-        <div class="card-ui">
-            <div class="stat-row"><span>LIQUIDITY</span><span class="stat-val">₦ 50,000.00</span></div>
-            <div class="stat-row"><span>CARGO STATUS</span><span class="stat-val" style="color:var(--gold);">AIRBORNE</span></div>
-            <div class="stat-row"><span>ACCESS LEVEL</span><span class="stat-val">PLATINUM</span></div>
-            <div style="height: 4px; background: #111; margin-top: 15px; border-radius: 2px;">
-                <div style="width: 88%; height: 100%; background: var(--gold); box-shadow: 0 0 10px var(--gold);"></div>
+    <div id="home" class="pillar active">
+        <div class="console-box">
+            <p style="font-size: 10px; color: #666; margin: 0;">GLOBAL OVERVIEW</p>
+            <h2 style="margin: 10px 0; font-size: 28px;">₦ 50,000.00</h2>
+            <div style="background: #111; height: 4px; border-radius: 2px;"><div style="width: 80%; height: 100%; background: var(--gold);"></div></div>
+            
+            <div class="system-log">
+                <div class="log-line">> AUTHENTICATING USER...</div>
+                <div class="log-line">> SYNCING PILLAR DATA...</div>
+                <div class="log-line">> SATELLITE LINK ESTABLISHED</div>
+                <div class="log-line">> SYSTEM NOMINAL.</div>
             </div>
         </div>
-        <button class="btn" onclick="triggerAlert('System Optimized')">SYNC ALL PILLARS</button>
+        <button class="btn" onclick="alert('Pillar Sync Complete')">REFRESH HUB</button>
     </div>
 
-    <div id="p-util" class="pillar-container">
-        <p style="letter-spacing: 5px; font-size: 11px; color: #666;">UTILITY HUB</p>
-        <div class="card-ui">
-            <h3 style="margin: 0; font-size: 18px;">VEND POWER</h3>
-            <p style="font-size: 11px; color: #666;">Direct connection to grid enabled.</p>
-            <input type="number" id="amt" placeholder="Enter Amount" style="width: 100%; background: #000; border: 1px solid #333; color: #fff; padding: 15px; margin-top: 15px; border-radius: 8px;">
+    <div id="util" class="pillar">
+        <div class="console-box">
+            <h3>UTILITIES</h3>
+            <p style="font-size: 11px; color: #666;">Ready for vending.</p>
+            <input type="number" placeholder="Amount (₦)" style="width: 100%; background: #000; border: 1px solid #333; color: #fff; padding: 15px; margin-top: 10px; border-radius: 8px; box-sizing: border-box;">
         </div>
-        <button class="btn">EXECUTE VEND</button>
+        <button class="btn">INITIALIZE VEND</button>
     </div>
 
-    <div id="p-logi" class="pillar-container">
-        <p style="letter-spacing: 5px; font-size: 11px; color: #666;">LOGISTICS RADAR</p>
-        <div class="card-ui">
-            <p style="font-size: 10px; color: #888;">FLIGHT #LJ-77</p>
-            <h2 style="margin: 10px 0;">LOS ➔ JFK</h2>
-            <p style="font-size: 11px; color: #00ff00;">ALTITUDE: 35,000 FT</p>
+    <div id="logi" class="pillar">
+        <div class="console-box">
+            <h3>JET-TRACK</h3>
+            <p style="font-size: 11px; color: #666;">Flight #LJ-77 in progress.</p>
+            <div style="margin: 15px 0; border-bottom: 1px solid #222; padding-bottom: 10px;">
+                <span style="font-size: 12px; color: #fff;">LOS ➔ DXB</span>
+                <span style="float: right; color: var(--gold); font-size: 12px;">72%</span>
+            </div>
         </div>
-        <button class="btn">VIEW SATELLITE</button>
+        <button class="btn">RADAR VIEW</button>
     </div>
 
-    <div id="p-fina" class="pillar-container">
-        <p style="letter-spacing: 5px; font-size: 11px; color: #666;">DIGITAL VAULT</p>
-        <div class="card-ui" style="background: linear-gradient(135deg, #1a1a1a, #000);">
-            <div style="width: 40px; height: 25px; background: var(--gold); border-radius: 4px; margin-bottom: 40px;"></div>
-            <p style="font-family: monospace; letter-spacing: 3px;">**** **** **** 2026</p>
+    <div id="fina" class="pillar">
+        <div class="console-box" style="background: linear-gradient(135deg, #111, #000);">
+            <div style="width: 40px; height: 25px; background: var(--gold); border-radius: 4px; margin-bottom: 30px;"></div>
+            <p style="font-family: monospace; letter-spacing: 2px;">**** **** **** 2026</p>
         </div>
-        <button class="btn">REVEAL SECURITY CODE</button>
+        <button class="btn">MANAGE VAULT</button>
     </div>
 
     <div class="dock">
-        <div id="n-home" class="dock-item active" onclick="nav('home')">🪐</div>
+        <div id="n-home" class="dock-item active-icon" onclick="nav('home')">🪐</div>
         <div id="n-util" class="dock-item" onclick="nav('util')">⚡</div>
         <div id="n-logi" class="dock-item" onclick="nav('logi')">✈️</div>
         <div id="n-fina" class="dock-item" onclick="nav('fina')">💳</div>
     </div>
 
     <script>
-        // BOOT SEQUENCE
-        setTimeout(() => {
-            document.getElementById('boot-screen').style.opacity = '0';
-            setTimeout(() => { document.getElementById('boot-screen').style.display = 'none'; }, 500);
-        }, 3000);
+        setTimeout(() => { document.getElementById('boot-screen').style.opacity = '0'; setTimeout(() => { document.getElementById('boot-screen').style.display = 'none'; }, 800); }, 2000);
 
         function nav(id) {
-            document.querySelectorAll('.pillar-container').forEach(p => p.classList.remove('active-pillar'));
-            document.querySelectorAll('.dock-item').forEach(d => d.classList.remove('active'));
-            document.getElementById('p-' + id).classList.add('active-pillar');
-            document.getElementById('n-' + id).classList.add('active');
+            document.querySelectorAll('.pillar').forEach(p => p.classList.remove('active'));
+            document.querySelectorAll('.dock-item').forEach(d => d.classList.remove('active-icon'));
+            document.getElementById(id).classList.add('active');
+            document.getElementById('n-' + id).classList.add('active-icon');
         }
 
-        function triggerAlert(msg) {
-            const status = document.getElementById('sys-status');
-            status.innerText = "● " + msg.toUpperCase();
-            status.style.color = "#FFD700";
-            setTimeout(() => { 
-                status.innerText = "● ENCRYPTED"; 
-                status.style.color = "#00ff00";
-            }, 3000);
-        }
-
-        setInterval(() => {
-            document.getElementById('timer').innerText = new Date().toLocaleTimeString();
-        }, 1000);
+        setInterval(() => { document.getElementById('clock').innerText = new Date().toLocaleTimeString(); }, 1000);
     </script>
 </body>
 </html>
