--- a/index.html
+++ b/index.html
@@ -5,105 +5,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LivenJet | Omni-Nexus</title>
     <style>
-        :root { --gold: #FFD700; --dark: #050505; }
+        :root { --gold: #FFD700; --dark: #050505; --neon: #00f2ff; }
         body { background-color: #000; color: var(--gold); font-family: 'Segoe UI', sans-serif; text-align: center; padding: 20px; margin: 0; overflow-x: hidden; padding-bottom: 140px; }
         
-        /* Boot & Global Styles */
-        #boot-screen { position: fixed; top:0; left:0; width:100%; height:100%; background:#000; z-index: 9999; display: flex; flex-direction: column; align-items: center; justify-content: center; transition: 0.8s; }
-        .avatar { width: 42px; height: 42px; background: var(--gold); border-radius: 8px; display: flex; align-items: center; justify-content: center; color: #000; font-weight: 900; }
+        /* Pulse Animation */
+        .pulse { animation: pulse-gold 2s infinite; }
+        @keyframes pulse-gold { 0% { box-shadow: 0 0 0 0 rgba(255, 215, 0, 0.4); } 70% { box-shadow: 0 0 0 10px rgba(255, 215, 0, 0); } 100% { box-shadow: 0 0 0 0 rgba(255, 215, 0, 0); } }
 
-        /* Pillar Containers */
-        .pillar { display: none; animation: fadeIn 0.5s ease; }
+        /* Pillar Transitions */
+        .pillar { display: none; animation: slideIn 0.4s ease-out; }
         .active { display: block; }
+        @keyframes slideIn { from { opacity: 0; transform: scale(0.95); } to { opacity: 1; transform: scale(1); } }
 
-        /* Master Console Design */
-        .console-box { 
-            background: rgba(15,15,15,0.9); border: 1px solid #222; 
-            border-left: 3px solid var(--gold); border-radius: 12px; 
-            padding: 20px; margin: 15px auto; max-width: 340px; text-align: left;
+        /* Intelligence Cards */
+        .intel-card { 
+            background: linear-gradient(145deg, #0a0a0a, #000); border: 1px solid #1a1a1a; 
+            border-radius: 16px; padding: 20px; margin: 15px auto; max-width: 340px; text-align: left;
         }
 
-        /* Live System Log (The "Soul" of the App) */
-        .system-log {
-            background: #050505; border: 1px solid #111; border-radius: 8px;
-            padding: 10px; font-family: monospace; font-size: 9px; height: 50px;
-            overflow: hidden; color: #444; margin-top: 15px;
-        }
-        .log-line { animation: scrollLog 3s infinite; }
+        /* Radar Simulation */
+        .radar-circle { width: 100px; height: 100px; border: 1px solid #222; border-radius: 50%; margin: 0 auto; position: relative; overflow: hidden; }
+        .radar-sweep { width: 100%; height: 100%; background: conic-gradient(from 0deg, transparent, rgba(255, 215, 0, 0.2)); animation: sweep 3s linear infinite; border-radius: 50%; }
+        @keyframes sweep { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
 
-        /* Buttons */
-        .btn { background: var(--gold); color: #000; font-weight: bold; padding: 18px; width: 100%; border: none; border-radius: 12px; margin: 10px 0; cursor: pointer; font-size: 12px; letter-spacing: 1px; }
+        /* Spending Pulse Bar */
+        .pulse-bar { display: flex; align-items: flex-end; gap: 4px; height: 40px; margin-top: 10px; }
+        .bar { flex: 1; background: #222; border-radius: 2px; transition: 0.3s; }
+        .bar.active { background: var(--gold); }
 
-        /* Mobile Dock */
-        .dock { position: fixed; bottom: 15px; left: 50%; transform: translateX(-50%); width: 92%; max-width: 400px; background: rgba(10,10,10,0.98); border: 1px solid #222; border-radius: 25px; display: flex; justify-content: space-around; padding: 18px 0; z-index: 1000; }
-        .dock-item { font-size: 22px; opacity: 0.2; transition: 0.3s; }
-        .active-icon { opacity: 1; transform: translateY(-8px); color: var(--gold); }
-
-        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-        @keyframes scrollLog { 0% { transform: translateY(0); } 100% { transform: translateY(-40px); } }
+        /* Navigation */
+        .dock { position: fixed; bottom: 15px; left: 50%; transform: translateX(-50%); width: 92%; max-width: 400px; background: rgba(10,10,10,0.95); border: 1px solid #222; border-radius: 25px; display: flex; justify-content: space-around; padding: 18px 0; z-index: 1000; backdrop-filter: blur(10px); }
+        .dock-item { font-size: 22px; opacity: 0.2; transition: 0.3s; color: #fff; }
+        .active-icon { opacity: 1; color: var(--gold); text-shadow: 0 0 10px var(--gold); }
     </style>
 </head>
 <body>
 
-    <div id="boot-screen">
-        <h2 style="letter-spacing: 10px;">LIVENJET</h2>
-        <p style="font-size: 9px; color: #333;">CONNECTING TO SATELLITE...</p>
-    </div>
-
-    <div style="display: flex; justify-content: space-between; align-items: center; padding: 10px 0;">
-        <div style="display: flex; align-items: center; gap: 10px;">
-            <div class="avatar">SA</div>
-            <div style="text-align: left;">
-                <p style="margin:0; font-size:12px; font-weight:bold; color:#fff;">STEVEN ADEWOLE</p>
-                <p style="margin:0; font-size:9px; color:#0f0;">● SECURE NODE</p>
-            </div>
+    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+        <div style="text-align: left;">
+            <p style="margin:0; font-size:12px; font-weight:bold; color:#fff;">LIVENJET NEXUS</p>
+            <p style="margin:0; font-size:9px; color:#0f0;">● NODE 01-ACTIVE</p>
         </div>
         <div id="clock" style="font-size: 11px; font-family: monospace;">00:00:00</div>
     </div>
 
     <div id="home" class="pillar active">
-        <div class="console-box">
-            <p style="font-size: 10px; color: #666; margin: 0;">GLOBAL OVERVIEW</p>
-            <h2 style="margin: 10px 0; font-size: 28px;">₦ 50,000.00</h2>
-            <div style="background: #111; height: 4px; border-radius: 2px;"><div style="width: 80%; height: 100%; background: var(--gold);"></div></div>
-            
-            <div class="system-log">
-                <div class="log-line">> AUTHENTICATING USER...</div>
-                <div class="log-line">> SYNCING PILLAR DATA...</div>
-                <div class="log-line">> SATELLITE LINK ESTABLISHED</div>
-                <div class="log-line">> SYSTEM NOMINAL.</div>
+        <div class="intel-card pulse">
+            <p style="font-size: 10px; color: #666; margin: 0;">TOTAL ASSET LIQUIDITY</p>
+            <h2 style="margin: 5px 0; font-size: 32px;">₦ 50,000.00</h2>
+            <div class="pulse-bar">
+                <div class="bar active" style="height: 40%;"></div>
+                <div class="bar active" style="height: 70%;"></div>
+                <div class="bar active" style="height: 50%;"></div>
+                <div class="bar active" style="height: 90%;"></div>
+                <div class="bar active" style="height: 60%;"></div>
+                <div class="bar" style="height: 30%;"></div>
             </div>
+            <p style="font-size: 9px; color: #444; margin-top: 10px;">VOLUME 24H: <span style="color:#0f0;">+4.2%</span></p>
         </div>
-        <button class="btn" onclick="alert('Pillar Sync Complete')">REFRESH HUB</button>
-    </div>
-
-    <div id="util" class="pillar">
-        <div class="console-box">
-            <h3>UTILITIES</h3>
-            <p style="font-size: 11px; color: #666;">Ready for vending.</p>
-            <input type="number" placeholder="Amount (₦)" style="width: 100%; background: #000; border: 1px solid #333; color: #fff; padding: 15px; margin-top: 10px; border-radius: 8px; box-sizing: border-box;">
-        </div>
-        <button class="btn">INITIALIZE VEND</button>
+        <button style="background:var(--gold); border:none; padding:15px; width:100%; border-radius:12px; font-weight:bold;">SYNC VAULT</button>
     </div>
 
     <div id="logi" class="pillar">
-        <div class="console-box">
-            <h3>JET-TRACK</h3>
-            <p style="font-size: 11px; color: #666;">Flight #LJ-77 in progress.</p>
-            <div style="margin: 15px 0; border-bottom: 1px solid #222; padding-bottom: 10px;">
-                <span style="font-size: 12px; color: #fff;">LOS ➔ DXB</span>
-                <span style="float: right; color: var(--gold); font-size: 12px;">72%</span>
+        <div class="intel-card">
+            <h3>JET-TRACK RADAR</h3>
+            <div class="radar-circle">
+                <div class="radar-sweep"></div>
+                <div style="position:absolute; top:40%; left:60%; width:4px; height:4px; background:var(--gold); border-radius:50%; box-shadow:0 0 10px var(--gold);"></div>
+            </div>
+            <p style="font-size: 11px; color: #666; margin-top:15px; text-align:center;">SCANNING AIRSPACE #LJ-77</p>
+        </div>
+        <button style="background:var(--gold); border:none; padding:15px; width:100%; border-radius:12px; font-weight:bold;">RE-ROUTE CARGO</button>
+    </div>
+
+    <div id="util" class="pillar">
+        <div class="intel-card">
+            <h3>SMART VEND</h3>
+            <p style="font-size: 11px; color: #666;">Select service to initialize node.</p>
+            <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px; margin-top:15px;">
+                <div style="background:#111; padding:15px; border-radius:8px; text-align:center; border:1px solid #222;">⚡ Power</div>
+                <div style="background:#111; padding:15px; border-radius:8px; text-align:center; border:1px solid #222;">📱 Data</div>
             </div>
         </div>
-        <button class="btn">RADAR VIEW</button>
     </div>
 
     <div id="fina" class="pillar">
-        <div class="console-box" style="background: linear-gradient(135deg, #111, #000);">
-            <div style="width: 40px; height: 25px; background: var(--gold); border-radius: 4px; margin-bottom: 30px;"></div>
-            <p style="font-family: monospace; letter-spacing: 2px;">**** **** **** 2026</p>
+        <div class="intel-card" style="border: 1px solid var(--gold);">
+            <p style="font-size: 10px; color: #888;">PLATINUM CREDIT</p>
+            <h3 style="letter-spacing: 2px;">**** 8820</h3>
+            <div style="height:30px;"></div>
+            <p style="font-size: 11px;">STEVEN ADEWOLE</p>
         </div>
-        <button class="btn">MANAGE VAULT</button>
+        <button style="background:#fff; color:#000; border:none; padding:15px; width:100%; border-radius:12px; font-weight:bold;">VAULT SECURITY</button>
     </div>
 
     <div class="dock">
@@ -114,15 +107,12 @@
     </div>
 
     <script>
-        setTimeout(() => { document.getElementById('boot-screen').style.opacity = '0'; setTimeout(() => { document.getElementById('boot-screen').style.display = 'none'; }, 800); }, 2000);
-
         function nav(id) {
             document.querySelectorAll('.pillar').forEach(p => p.classList.remove('active'));
             document.querySelectorAll('.dock-item').forEach(d => d.classList.remove('active-icon'));
             document.getElementById(id).classList.add('active');
             document.getElementById('n-' + id).classList.add('active-icon');
         }
-
         setInterval(() => { document.getElementById('clock').innerText = new Date().toLocaleTimeString(); }, 1000);
     </script>
 </body>
