--- a/index.html
+++ b/index.html
@@ -3,100 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LivenJet | Omni-Nexus</title>
+    <title>LivenJet | Nexus OS</title>
     <style>
         :root { --gold: #FFD700; --dark: #050505; --neon: #00f2ff; }
-        body { background-color: #000; color: var(--gold); font-family: 'Segoe UI', sans-serif; text-align: center; padding: 20px; margin: 0; overflow-x: hidden; padding-bottom: 140px; }
+        body { background-color: #000; color: var(--gold); font-family: 'Segoe UI', sans-serif; text-align: center; padding: 20px 0; margin: 0; overflow-x: hidden; padding-bottom: 140px; }
         
-        /* Pulse Animation */
-        .pulse { animation: pulse-gold 2s infinite; }
-        @keyframes pulse-gold { 0% { box-shadow: 0 0 0 0 rgba(255, 215, 0, 0.4); } 70% { box-shadow: 0 0 0 10px rgba(255, 215, 0, 0); } 100% { box-shadow: 0 0 0 0 rgba(255, 215, 0, 0); } }
+        /* GLOBAL COMMAND TICKER */
+        .ticker-wrap { width: 100%; overflow: hidden; background: #111; border-bottom: 1px solid #222; padding: 5px 0; position: fixed; top: 0; z-index: 2000; }
+        .ticker { display: flex; white-space: nowrap; animation: ticker-move 20s linear infinite; font-family: monospace; font-size: 10px; color: #888; letter-spacing: 1px; }
+        @keyframes ticker-move { 0% { transform: translateX(100%); } 100% { transform: translateX(-100%); } }
 
-        /* Pillar Transitions */
-        .pillar { display: none; animation: slideIn 0.4s ease-out; }
+        /* Dashboard Styles */
+        .pillar { display: none; animation: slideUp 0.4s ease; padding: 20px; }
         .active { display: block; }
-        @keyframes slideIn { from { opacity: 0; transform: scale(0.95); } to { opacity: 1; transform: scale(1); } }
+        @keyframes slideUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
 
-        /* Intelligence Cards */
+        /* Intelligent Cards */
         .intel-card { 
             background: linear-gradient(145deg, #0a0a0a, #000); border: 1px solid #1a1a1a; 
-            border-radius: 16px; padding: 20px; margin: 15px auto; max-width: 340px; text-align: left;
+            border-left: 4px solid var(--gold); border-radius: 12px; 
+            padding: 20px; margin: 15px auto; max-width: 340px; text-align: left;
         }
 
-        /* Radar Simulation */
-        .radar-circle { width: 100px; height: 100px; border: 1px solid #222; border-radius: 50%; margin: 0 auto; position: relative; overflow: hidden; }
-        .radar-sweep { width: 100%; height: 100%; background: conic-gradient(from 0deg, transparent, rgba(255, 215, 0, 0.2)); animation: sweep 3s linear infinite; border-radius: 50%; }
-        @keyframes sweep { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
+        /* Status Ring */
+        .status-ring { width: 60px; height: 60px; border: 2px solid #222; border-top: 2px solid var(--gold); border-radius: 50%; animation: spin 2s linear infinite; margin: 0 auto; }
+        @keyframes spin { 100% { transform: rotate(360deg); } }
 
-        /* Spending Pulse Bar */
-        .pulse-bar { display: flex; align-items: flex-end; gap: 4px; height: 40px; margin-top: 10px; }
-        .bar { flex: 1; background: #222; border-radius: 2px; transition: 0.3s; }
-        .bar.active { background: var(--gold); }
-
-        /* Navigation */
+        /* Navigation Dock */
         .dock { position: fixed; bottom: 15px; left: 50%; transform: translateX(-50%); width: 92%; max-width: 400px; background: rgba(10,10,10,0.95); border: 1px solid #222; border-radius: 25px; display: flex; justify-content: space-around; padding: 18px 0; z-index: 1000; backdrop-filter: blur(10px); }
         .dock-item { font-size: 22px; opacity: 0.2; transition: 0.3s; color: #fff; }
-        .active-icon { opacity: 1; color: var(--gold); text-shadow: 0 0 10px var(--gold); }
+        .active-icon { opacity: 1; color: var(--gold); transform: translateY(-8px); }
     </style>
 </head>
 <body>
 
-    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
-        <div style="text-align: left;">
-            <p style="margin:0; font-size:12px; font-weight:bold; color:#fff;">LIVENJET NEXUS</p>
-            <p style="margin:0; font-size:9px; color:#0f0;">● NODE 01-ACTIVE</p>
+    <div class="ticker-wrap">
+        <div class="ticker">
+            LIVENJET SATELLITE LJ-01: STATUS OPTIMAL | MARKET: LJN +4.2% (▲) | CARGO #992 IN-FLIGHT | SYSTEM TIME: <span id="ticker-clock"></span> | ENCRYPTION LEVEL: PLATINUM
         </div>
-        <div id="clock" style="font-size: 11px; font-family: monospace;">00:00:00</div>
+    </div>
+
+    <div style="padding-top: 40px;">
+        <div class="avatar" style="width:40px; height:40px; background:var(--gold); border-radius:8px; display:flex; align-items:center; justify-content:center; color:#000; font-weight:900; margin:10px auto;">SA</div>
+        <p style="margin:0; font-size:11px; font-weight:bold;">STEVEN ADEWOLE</p>
     </div>
 
     <div id="home" class="pillar active">
-        <div class="intel-card pulse">
-            <p style="font-size: 10px; color: #666; margin: 0;">TOTAL ASSET LIQUIDITY</p>
-            <h2 style="margin: 5px 0; font-size: 32px;">₦ 50,000.00</h2>
-            <div class="pulse-bar">
-                <div class="bar active" style="height: 40%;"></div>
-                <div class="bar active" style="height: 70%;"></div>
-                <div class="bar active" style="height: 50%;"></div>
-                <div class="bar active" style="height: 90%;"></div>
-                <div class="bar active" style="height: 60%;"></div>
-                <div class="bar" style="height: 30%;"></div>
-            </div>
-            <p style="font-size: 9px; color: #444; margin-top: 10px;">VOLUME 24H: <span style="color:#0f0;">+4.2%</span></p>
+        <div class="intel-card">
+            <p style="font-size: 10px; color: #666; margin: 0;">AVAILABLE LIQUIDITY</p>
+            <h2 style="margin: 5px 0; font-size: 32px; font-family: monospace;">₦ 50,000.00</h2>
+            <p style="font-size: 10px; color: #0f0;">● NODE 01-ACTIVE</p>
         </div>
-        <button style="background:var(--gold); border:none; padding:15px; width:100%; border-radius:12px; font-weight:bold;">SYNC VAULT</button>
+        <div class="status-ring"></div>
+        <p style="font-size: 9px; margin-top: 10px; color: #444;">SYNCING WITH NEURAL LINK...</p>
     </div>
 
     <div id="logi" class="pillar">
         <div class="intel-card">
-            <h3>JET-TRACK RADAR</h3>
-            <div class="radar-circle">
-                <div class="radar-sweep"></div>
-                <div style="position:absolute; top:40%; left:60%; width:4px; height:4px; background:var(--gold); border-radius:50%; box-shadow:0 0 10px var(--gold);"></div>
+            <h3 style="margin:0;">JET-TRACK</h3>
+            <p style="font-size: 11px; color: #666;">Monitoring LOS ➔ DXB #LJ-77</p>
+            <div style="background: #111; height: 6px; border-radius: 10px; margin: 15px 0; overflow:hidden;">
+                <div style="background: var(--gold); width: 85%; height: 100%; box-shadow: 0 0 10px var(--gold);"></div>
             </div>
-            <p style="font-size: 11px; color: #666; margin-top:15px; text-align:center;">SCANNING AIRSPACE #LJ-77</p>
+            <p style="font-size: 10px; color: var(--gold);">ETA: 2H 40M</p>
         </div>
-        <button style="background:var(--gold); border:none; padding:15px; width:100%; border-radius:12px; font-weight:bold;">RE-ROUTE CARGO</button>
     </div>
 
     <div id="util" class="pillar">
         <div class="intel-card">
-            <h3>SMART VEND</h3>
-            <p style="font-size: 11px; color: #666;">Select service to initialize node.</p>
+            <h3 style="margin:0;">VEND HUB</h3>
+            <p style="font-size: 11px; color: #666;">Select utility node to authorize.</p>
             <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px; margin-top:15px;">
-                <div style="background:#111; padding:15px; border-radius:8px; text-align:center; border:1px solid #222;">⚡ Power</div>
-                <div style="background:#111; padding:15px; border-radius:8px; text-align:center; border:1px solid #222;">📱 Data</div>
+                <div style="background:#111; padding:15px; border-radius:8px; border:1px solid #222;">⚡ POWER</div>
+                <div style="background:#111; padding:15px; border-radius:8px; border:1px solid #222;">📱 DATA</div>
             </div>
         </div>
     </div>
 
     <div id="fina" class="pillar">
-        <div class="intel-card" style="border: 1px solid var(--gold);">
-            <p style="font-size: 10px; color: #888;">PLATINUM CREDIT</p>
-            <h3 style="letter-spacing: 2px;">**** 8820</h3>
-            <div style="height:30px;"></div>
-            <p style="font-size: 11px;">STEVEN ADEWOLE</p>
+        <div class="intel-card" style="border-right: 4px solid var(--gold);">
+            <p style="font-size: 10px; color: #888;">PLATINUM VAULT</p>
+            <h3 style="letter-spacing: 2px;">**** **** **** 8820</h3>
+            <p style="font-size: 11px; margin-top:20px;">ACCESS CODE REQUIRED</p>
         </div>
-        <button style="background:#fff; color:#000; border:none; padding:15px; width:100%; border-radius:12px; font-weight:bold;">VAULT SECURITY</button>
     </div>
 
     <div class="dock">
@@ -113,7 +102,10 @@
             document.getElementById(id).classList.add('active');
             document.getElementById('n-' + id).classList.add('active-icon');
         }
-        setInterval(() => { document.getElementById('clock').innerText = new Date().toLocaleTimeString(); }, 1000);
+        setInterval(() => { 
+            const now = new Date();
+            document.getElementById('ticker-clock').innerText = now.toLocaleTimeString(); 
+        }, 1000);
     </script>
 </body>
 </html>
